Wed Aug  6 03:01:51 CEST 2003
-----------------------------
  * clamd: new directives: VirusAction, Debug
  * libclamav: zziplib downgraded to the old version due to Zip handling
	       problems

Sun Aug  3 03:35:49 CEST 2003
-----------------------------
  * libclamav: zziplib updated to 0.10.83-pre1
  * clamscan: --debug enables libclamav's debug messages without a need
	      to recompile with --enable-debug

Sat Jul 26 17:11:46 CEST 2003
-----------------------------
  * libclamav: updated mbox code (Nigel)

Thu Jul 24 13:29:39 CEST 2003
-----------------------------
  * libclamav: mbox: fixed detection of the Gibe virus (bug reported
	       by Rene Bellora); support for log file names (problem
	       reported by Tomasz Papszun)

Sun Jul 20 23:43:38 CEST 2003
-----------------------------
  * libclamav: mbox: improved scanning of uuencoded files and other
		     important fixes (Nigel)
  * libclamav: removed mutex for cl_mbox
  * mirrors.txt: added clamav.org mirror (maintained by Nicholas Chua)

Sat Jul 19 02:31:27 CEST 2003
-----------------------------
  * clamd: fixed LogFile permissions (applied patch from Magnus Ekdahl)
  * libclamav: mbox: mbox moved to scanmail(), support for cancellation
	       (this should protect against a deadlock when cancelled
	       after timeout).
  * added ./contrib/clamdb (author: Ted Fines, Macalester College)

Wed Jul 17 23:33:17 CEST 2003
-----------------------------
  * libclamav: mbox: Temporary fix to handle filenames that include the
	       newline character (Nigel)

Mon Jul 14 03:43:35 CEST 2003
----------------------------
  * clamav-milter: Some TODOs done by Nigel Kukard <nkukard@lbsd.net>
                   Should stop a couple of remote chances of crashes (Nigel)

Thu Jul 10 17:16:32 CEST 2003
  * clamd: fixed PidFile permissions (applied patch from Magnus Ekdahl, the
	   bug was reported by Tomasz Papszun)

Tue Jul  8 21:34:11 CEST 2003
-----------------------------